--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
 
 			</div>
 
-			<div class = 'everythingElse'> 
-				<h1 id = 'onlyHOne'> </h1>
-				<p> </p>
-				<div> 
-					<a href = '#'> </a>
-					<a href = '#'> </a>
-					<a href = '#'> </a>
-					<a href = '#'> </a>
+			<div class = 'everythingElse'>
+				<div class = 'everythingElseContent'>
+					<h1 id = 'onlyHOne'> For every student, every classroom. Real results. </h1>
+					<p> We're a nonprofit with the mission to provide a free, world-class education for anyone, anywhere. </p>
+					<div> 
+						<a href = '#'> Learners </a>
+						<a href = '#'> Learners </a>
+						<a href = '#'> Learners </a>
+						<a href = '#'> Learners </a>
 				</div>
 			</div>
 		</section>
