--- a/index.html
+++ b/index.html
@@ -14,9 +14,29 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<header>
+			<section class = 'TwoLinks'>
 
-		
+			</section>
 
+			<section class = 'Logo'>
+
+			</section>
+
+			<section class = 'list'>
+
+			</section>
+		</header>
+
+		<section class = 'mainSec'>
+			<div class = 'image'> 
+
+			</div>
+
+			<div class = 'everythingElse'> 
+
+			</div>
+		</section>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
