--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
 	<body>
 		<header>
 			<section class = 'TwoLinks'>
-
+				<img id = 'leftLinks' src = 'leftSide.jpeg' alt = 'leftLinks'>
 			</section>
 
 			<section class = 'Logo'>
-
+				<img id = 'LogoImage' src = 'logo.jpeg' alt = 'logo'>
 			</section>
 
 			<section class = 'list'>
+				<a href = '#' alt = ''> Donate </a>
 
+				<a href = '#' alt = ''> Sign Up </a>
+
+				<a href = '#' alt = ''> Login </a>
 			</section>
 		</header>
 
 		<section class = 'mainSec'>
 			<div class = 'image'> 
-
+				<img id = 'imageLarge' src = 'image.jpeg' alt = 'logo'>
 			</div>
 
 			<div class = 'everythingElse'>
@@ -38,10 +42,13 @@
 					<h1 id = 'onlyHOne'> For every student, every classroom. Real results. </h1>
 					<p> We're a nonprofit with the mission to provide a free, world-class education for anyone, anywhere. </p>
 					<div> 
-						<a href = '#'> Learners </a>
-						<a href = '#'> Learners </a>
-						<a href = '#'> Learners </a>
-						<a href = '#'> Learners </a>
+						<button> Learners </button>
+
+						<button> Teachers </button>
+
+						<button> Districts </button>
+
+						<button> Parents </button>
 				</div>
 			</div>
 		</section>
