--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 			</div>
 
 			<div class = 'everythingElse'> 
-
+				<h1 id = 'onlyHOne'> </h1>
+				<p> </p>
+				<div> 
+					<a href = '#'> </a>
+					<a href = '#'> </a>
+					<a href = '#'> </a>
+					<a href = '#'> </a>
+				</div>
 			</div>
 		</section>
 
